Tue Sep 22 20:59:41 GMT 2015  Olly Betts <olly@survex.com>

	* lib/sk.po: Fix clashing menu accelerators.

Tue Sep 22 20:52:33 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Update stats for CUCC dataset.

Tue Sep 22 20:42:02 GMT 2015  Olly Betts <olly@survex.com>

	* src/mainfrm.cc: Add FIXME for wording of "Full Screen Mode" menu
	  item on OS X.

Mon Sep 21 07:25:37 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavernlog.cc,src/cavernlog.h: If wx was built with thread
	  support, aven now runs cavern from a separate thread, which
	  works better under wxMSW (where we can't use select), and seems
	  a bit smoother on Linux.

Sun Sep 20 06:50:53 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Document anonymous stations in the manual, based on
	  the text from NEWS.  Reported by Wookey.

Sat Sep 19 03:54:39 GMT 2015  Olly Betts <olly@survex.com>

	* src/mainfrm.cc: Use utf8_str() instead of fn_str() for the filename
	  to pass to the img library.

Sat Sep 19 03:08:28 GMT 2015  Olly Betts <olly@survex.com>

	* src/mainfrm.cc: Hide the OpenGL window when we show the log window,
	  to fix issues with the OpenGL window still showing up under wxMSW.

Fri Sep 18 09:22:11 GMT 2015  Olly Betts <olly@survex.com>

	* src/aventreectrl.cc,src/aventreectrl.h: Back out accidentally
	  committed debugging code which sends output to stdout from the
	  tree control.

Thu Sep 17 21:50:35 GMT 2015  Olly Betts <olly@survex.com>

	* lib/id.po: Update Indonesian translation.

Tue Sep 15 20:57:58 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Look for wx-config-3.0, which Fedora's wx3 packages
	  have.  Reported by James Begley.

Tue Sep 15 07:26:53 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavernlog.cc: Fix the cavern log under WXMSW.  Reported by Brian
	  Clipstone.

Tue Sep 15 06:57:00 GMT 2015  Olly Betts <olly@survex.com>

	* lib/sk.po: Translate "Help".

Wed Sep 09 07:16:51 GMT 2015  Olly Betts <olly@survex.com>
