@@ -1,3 +1,8 @@
+Wed Sep 23 00:23:19 GMT 2015  Olly Betts <olly@survex.com>
+
+	* src/aven.cc: Add workaround for therion's assumptions about the
+	  "Process" file association.
+
 Tue Sep 22 20:59:41 GMT 2015  Olly Betts <olly@survex.com>
 
 	* lib/sk.po: Fix clashing menu accelerators.
